<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/include_toolbar" />

        <android.support.v7.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_8dp"
            android:background="@drawable/search_view_background"
            app:iconifiedByDefault="false"
            app:queryHint="Please enter search keyword" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/space_16dp"
            android:background="@color/color_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_8dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txt_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/space_8dp"
                    android:text="@string/lbl_country"
                    android:textColor="@color/color_black" />

                <Spinner
                    android:id="@+id/sp_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_country"
                    android:layout_marginTop="@dimen/space_8dp"
                    android:background="@drawable/search_view_background"
                    android:padding="@dimen/space_8dp" />
            </RelativeLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/color_gray" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_8dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txt_media"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/space_8dp"
                    android:text="@string/lbl_media"
                    android:textColor="@color/color_black" />

                <Spinner
                    android:id="@+id/sp_media"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_media"
                    android:layout_marginTop="@dimen/space_8dp"
                    android:background="@drawable/search_view_background"
                    android:padding="@dimen/space_8dp" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_8dp"
            android:layout_marginStart="@dimen/space_8dp"
            android:padding="@dimen/space_8dp"
            android:text="@string/lbl_entity"
            android:textColor="@color/color_black" />

        <Spinner
            android:id="@+id/sp_entity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_8dp"
            android:layout_marginStart="@dimen/space_8dp"
            android:layout_marginTop="@dimen/space_8dp"
            android:background="@drawable/search_view_background"
            android:padding="@dimen/space_8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/space_8dp"
            android:background="@color/color_gray" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8dp"
            android:gravity="center"
            android:text="@string/lbl_last_search"
            android:textColor="@color/color_black"
            android:textSize="@dimen/text_20sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_last_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/lbl_search"
            android:textColor="@color/color_white" />
    </LinearLayout>
</layout>